name:                brainfuck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holguinj/brainfuck#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Holguin
maintainer:          justin.h.holguin@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brainfuck
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Brainfuck.Execute,
                       Brainfuck.Memory,
                       Brainfuck.Parse,
                       Brainfuck.State,
                       Brainfuck.Types
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11
                     , containers
                     , vector
